<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="Permissives" Id="{639d0291-603e-4994-93d7-3ec14345fa0c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Permissives
VAR
	//AllChargeRelayClosed 	: BOOL := 0;
	//AllDumpRelayOpen		: BOOL := 0;
	ReadyToCharge			: BOOL := 0;
	AllChargerEOC			: BOOL := 0;
	
	ChargerVBelowThres		: BOOL := 0;
	ChargedVThres			: REAL := 50;
	AllChargerHVisOFF		: BOOL := 0;
	AllChargerInhibitON		: BOOL := 0;

	AllCapsDischarged		: BOOL := 0;
	SystemIsSafe			: BOOL := 0;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF MCP_IO.ShortContactClose = TRUE AND MCP_IO.UnshortContactClose = FALSE THEN 
	Permissives_DB.ShortingSystemEngaged := TRUE;
	ELSIF MCP_IO.ShortContactClose = FALSE AND MCP_IO.UnshortContactClose = TRUE THEN
		Permissives_DB.ShortingSystemEngaged := FALSE;
END_IF


IF MCP_IO.DoorSWclose = TRUE AND MCP_IO.EStopPB_NotPressed = TRUE THEN 
	Permissives_DB.CageInterlockOK := TRUE;
	ELSE
		Permissives_DB.CageInterlockOK := FALSE;
	END_IF

IF Permissives_DB.CageInterlockOK = FALSE THEN 
	MCP_IO.EnergizeACKontactor := FALSE;
END_IF

IF LCP1_IO.Segment[1].Module[1].ChargeRly_close = TRUE(*AND all the other modules *) OR HMI_DB.AllChargeRelayCloseBP = TRUE
	THEN
		Permissives_DB.AllChargeRelayClosed := TRUE;
	ELSE
		Permissives_DB.AllChargeRelayClosed := FALSE;
END_IF;

IF LCP1_IO.Segment[1].Module[1].DumpRly_open = TRUE(*AND all the other modules *) OR HMI_DB.AllDumpRelaysOpenBP = TRUE
	THEN
		Permissives_DB.AllDumpRelayOpen := TRUE;
	ELSE
		Permissives_DB.AllDumpRelayOpen := FALSE;
END_IF;

IF Permissives_DB.AllChargeRelayClosed = TRUE AND Permissives_DB.AllDumpRelayOpen = TRUE THEN
	Permissives_DB.ReadyToCharge := TRUE;
	ELSE 
		Permissives_DB.ReadyToCharge := FALSE;
END_IF

IF MCP_IO.Charger[1].voltageFeedback <= 10 (*AND all other Chargers*) THEN
	ChargerVBelowThres := TRUE;
	ELSE
		ChargerVBelowThres := FALSE;
END_IF;

IF MCP_IO.Charger[1].HV_isON = FALSE (*AND all other Chargers*) THEN
	AllChargerHVisOFF := TRUE;
	ELSE 
		AllChargerHVisOFF := FALSE;
END_IF

IF MCP_IO.Charger[1].inhibited = TRUE (*AND all other Chargers*) THEN
	AllChargerInhibitON	:= TRUE;
	ELSE
		AllChargerInhibitON	:= FALSE;
END_IF;

//Cap voltage feedback
IF LCP1_IO.Segment[1].Module[1].VoltageFeedback <= ChargedVThres (*  AND all other module voltage feedback <= 10 *) THEN
	AllCapsDischarged := TRUE;
	LCP1_IO.Segment[1].Module[1].ModuleCharged := FALSE; //for status light only
	ELSE 
		AllCapsDischarged := FALSE;
END_IF


IF (ChargerVBelowThres = TRUE AND 
	//AllChargerHVisOFF = TRUE AND 
	AllChargerInhibitON	= TRUE AND 
	Permissives_DB.AllDumpRelayOpen = FALSE AND 
	AllCapsDischarged = TRUE AND 
	Permissives_DB.CageInterlockOK = TRUE) OR HMI_DB.SystemSafeBP = TRUE
THEN
	(*MCP_IO.Charger[2].voltageFeedback <= 10 AND *)
	SystemIsSafe := TRUE;
	ELSE
		SystemIsSafe := FALSE;
END_IF


IF MCP_IO.Charger[1].EndOfCharge = TRUE (*AND
	MCP_IO.Charger[2].EndOfCharge = TRUE AND
	MCP_IO.Charger[3].EndOfCharge = TRUE AND
	MCP_IO.Charger[4].EndOfCharge = TRUE AND
	MCP_IO.Charger[5].EndOfCharge = TRUE AND
	MCP_IO.Charger[6].EndOfCharge = TRUE *)
THEN
	Permissives_DB.AllChargerEOC := TRUE;
	ELSE
		Permissives_DB.AllChargerEOC := FALSE;

END_IF;

]]></ST>
    </Implementation>
    <LineIds Name="Permissives">
      <LineId Id="191" Count="0" />
      <LineId Id="193" Count="0" />
      <LineId Id="197" Count="1" />
      <LineId Id="194" Count="0" />
      <LineId Id="192" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="183" Count="1" />
      <LineId Id="180" Count="0" />
      <LineId Id="185" Count="2" />
      <LineId Id="181" Count="0" />
      <LineId Id="188" Count="1" />
      <LineId Id="182" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="17" Count="7" />
      <LineId Id="16" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="27" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="121" Count="2" />
      <LineId Id="125" Count="1" />
      <LineId Id="124" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="132" Count="1" />
      <LineId Id="131" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="140" Count="1" />
      <LineId Id="139" Count="0" />
      <LineId Id="215" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="216" Count="0" />
      <LineId Id="147" Count="1" />
      <LineId Id="146" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="53" Count="2" />
      <LineId Id="100" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="56" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="82" Count="3" />
      <LineId Id="79" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="86" Count="2" />
      <LineId Id="72" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="77" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>